added banner contents

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header-view">
         <nav class="topbar-container">
             <div class="travel-icon">
-                <img src="B9A2-Hero-Travel/Images/Group 40071 (2).png" alt="">
+                <img src="Images/Group 40071 (2).png" alt="">
 
                 <p>M R <span class="travel-color">Tours & Travels</span> </p>
             </div>
@@ -24,7 +24,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="background-img">
             <div class="bannser-title">
                 <h1>Explore Your Travel</h1>
                 
